# AcousticSim

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml
benchmarks/: Catch2Main.cpp
cmake/: Assets.cmake  GitHubENV.cmake  JUCEDefaults.cmake  Version.cmake
model/: PIPELINE.md  lstm32_train.py
packaging/: dmg.json
packaging/resources/: README
source/: AcousticNotes.md  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: Catch2Main.cpp  PluginBasics.cpp
